[package]
name = "binance_rs_async_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "0.15.0", features = ["clap"] }
binance-rs-async = "1.3.3"
atomic-interval = "0.1.4"
configurations = { version = "0.1.0", path = "configurations" }
rust_decimal = { version = "1.35.0", features = ["serde-with-float"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1", features = ["release_max_level_debug", "log"] }
env_logger = "0.11.3"
binance = { version = "1.3.3", package = "binance-rs-async" }
